# Finite_Memory_AI

./: .editorconfig  .gitignore  ALL_ISSUES_FIXED.md  ALL_TESTS_PASSING.md  BUILD_OPTIMIZATION.md  BUILD_OPTIMIZATION_COMPLETE.md  BUILD_OPTIMIZED.md  CHANGELOG.md  CODE_ENHANCEMENTS_COMPLETE.md  COMPLETE_STATUS.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FIXES.md  DEPLOYMENT_SUMMARY.md  ENHANCEMENTS_COMPLETE.md  ENHANCEMENTS_SUMMARY.md  FINAL_BUILD_STATUS.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_STATUS.md  FINAL_TEST_STATUS.md  FINAL_VERIFICATION_REPORT.md  FIXES_APPLIED.md  FIXES_COMPLETE.md  GIT_PUSH_INSTRUCTIONS.md  HONEST_PERFORMANCE_REPORT.md  HOW_IT_WORKS.md  LICENSE  MANIFEST.in  MASTER_SUMMARY.md  MODERNIZATION_REPORT.md  Makefile  OPTIMIZATIONS_APPLIED.md  OPTIMIZATION_COMPLETE.md  PACKAGE_SPLIT_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  POST_PUSH_CHECKLIST.md  PRIORITIES_COMPLETE.md  PRODUCTION_READY_CHECKLIST.md  (+26 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  optimized-ci.yml
benchmarks/: __init__.py  accuracy_harness.py  benchmark_policies.py
chat_ui/: CHAT_UI_COMPLETE.md  COMPLETE_FEATURES.md  DEBUG_REPORT.md  DEEPSEEK_UPGRADE.md  README.md  UI_UPGRADE_COMPLETE.md  app.js  app_working.js  index.html  requirements.txt  server.py  simple.html  styles.css  test.html
examples/: __init__.py  basic_chat.py  checkpoint_demo.py  hosted_api_example.py  latency_budgeting_demo.py  policy_comparison.py  production_deployment.py  tier1_demo.py  v2_4_features_demo.py
finite_memory_llm/: __init__.py  async_core.py  backends.py  backends_lazy.py  core.py  interfaces.py  multilingual.py  utils.py
finite_memory_llm/memory/: __init__.py  vector_store.py
finite_memory_llm/telemetry/: __init__.py  metrics.py  turn_debug_dump.py
finite_memory_llm/upgrades/: __init__.py  block_sparse.py  embed_cache.py  knapsack.py  latency_guard.py  summary_qa_gate.py
scripts/: benchmark_real.py  full-build.sh  profile_imports.py  quick-build.sh
tests/: __init__.py  test_coverage_boost.py  test_edge_cases.py  test_finite_memory.py  test_integration_real.py  test_performance_regression.py  test_tier1_upgrades.py  test_utils.py
